--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
   		</div>
 	</nav>
 	<div class = "container">
-		<table class = "table table-hover sortable" id = "colorTable">
+		<table class="table table-hover sortable" id ="ranklistTable">
+			<thead>
+				<tr></tr>
+			</thead>
+			<tbody></tbody>
+		</table>
+		<!-- <table class = "table table-hover sortable" id = "colorTable">
+			
 		<thead>
 		  <tr>
 			<th>Number</th>
@@ -188,7 +195,7 @@
 			<td>0</td>
 		  </tr>
 		</tbody>
-		</table>
+		</table> -->
     </div>
         <!-- jQuery library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
