saved for automating array to table

--- a/student1.html
+++ b/student1.html
@@ -57,8 +57,8 @@
     </p>
 
     <div class = "container -fluid">
-		<table class = "table table-hover" id="studentTable">
-		<thead>
+		<table class = "table table-hover abyss" id="studentTable">
+		<!--<thead>
 		  <tr>
 			<th>Component</th>
 			<th>Sum</th>
@@ -79,102 +79,102 @@
 		<tbody>
 		  <tr>
 			<td>Mini Contests</td>
-			<td>0</td>
-			<td>x</td>
-			<td>x</td>
-			<td>x</td>
-			<td>x</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
+			<td class="mini-contest">0</td>
+			<td class="mini-contest" id="1">x</td>
+			<td class="mini-contest" id="2">x</td>
+			<td class="mini-contest" id="3">x</td>
+			<td class="mini-contest" id="4">x</td>
+			<td class="mini-contest" id="5">x</td>
+			<td class="mini-contest" id="6"></td>
+			<td class="mini-contest" id="7"></td>
+			<td class="mini-contest" id="8"></td>
+			<td class="mini-contest" id="9"></td>
+			<td class="mini-contest" id="10"></td>
+			<td class="mini-contest" id="11"></td>
+			<td class="mini-contest" id="12"></td>
 		</tr>
 		<tr>
 			<td>Team Contests</td>
-			<td class="hidden-xs hidden-sm empty">x</td>
-			<td>x</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
+			<td class="hidden-xs hidden-sm empty team-contest">x</td>
+			<td class="team-contest" id="1">x</td>
+			<td class="team-contest" id="2">x</td>
+			<td class="team-contest" id="3">x</td>
+			<td class="team-contest" id="4"></td>
+			<td class="team-contest" id="5"></td>
+			<td class="team-contest" id="6"></td>
+			<td class="team-contest" id="7"></td>
+			<td class="team-contest" id="8"></td>
+			<td class="team-contest" id="9"></td>
+			<td class="team-contest" id="10"></td>
+			<td class="team-contest" id="11"></td>
+			<td class="team-contest" id="12"></td>
 		</tr>
 		<tr>
 			<td>Homework</td>
 			<td>0</td>
-			<td>x</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
+			<td class="homework" id="1"></td>
+			<td class="homework" id="2"></td>
+			<td class="homework" id="3"></td>
+			<td class="homework" id="4"></td>
+			<td class="homework" id="5"></td>
+			<td class="homework" id="6"></td>
+			<td class="homework" id="7"></td>
+			<td class="homework" id="8"></td>
+			<td class="homework" id="9"></td>
+			<td class="homework" id="10"></td>
+			<td class="homework" id="11"></td>
+			<td class="homework" id="12"></td>
 		</tr>
 		<tr>
 			<td>Problem Bs</td>
 			<td>0</td>
-			<td>x</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
+			<td class="problem-bs" id="1"></td>
+			<td class="problem-bs" id="2"></td>
+			<td class="problem-bs" id="3"></td>
+			<td class="problem-bs" id="4"></td>
+			<td class="problem-bs" id="5"></td>
+			<td class="problem-bs" id="6"></td>
+			<td class="problem-bs" id="7"></td>
+			<td class="problem-bs" id="8"></td>
+			<td class="problem-bs" id="9"></td>
+			<td class="problem-bs" id="10"></td>
+			<td class="problem-bs" id="11"></td>
+			<td class="problem-bs" id="12"></td>
 		</tr>
 		<tr>
 			<td>Kattis Sets</td>
 			<td>x</td>
-			<td>x</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
+			<td class="kattis-sets" id="1"></td>
+			<td class="kattis-sets" id="2"></td>
+			<td class="kattis-sets" id="3"></td>
+			<td class="kattis-sets" id="4"></td>
+			<td class="kattis-sets" id="5"></td>
+			<td class="kattis-sets" id="6"></td>
+			<td class="kattis-sets" id="7"></td>
+			<td class="kattis-sets" id="8"></td>
+			<td class="kattis-sets" id="9"></td>
+			<td class="kattis-sets" id="10"></td>
+			<td class="kattis-sets" id="11"></td>
+			<td class="kattis-sets" id="12"></td>
 		  </tr>
 		  <tr>
 			<td>Achievements</td>
 			<td>x</td>
-			<td>x</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
+			<td class="achievements" id="1"></td>
+			<td class="achievements" id="2"></td>
+			<td class="achievements" id="3"></td>
+			<td class="achievements" id="4"></td>
+			<td class="achievements" id="5"></td>
+			<td class="achievements" id="6"></td>
+			<td class="achievements" id="7"></td>
+			<td class="achievements" id="8"></td>
+			<td class="achievements" id="9"></td>
+			<td class="achievements" id="10"></td>
+			<td class="achievements" id="11"></td>
+			<td class="achievements" id="12"></td>
 		  </tr>
-		  
 		</tbody>
+		-->  
 		</table>
 
     <p>Achievement details:
@@ -199,9 +199,7 @@
 		<!-- Latest compiled JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.28.4/js/jquery.tablesorter.js"></script> 
-		<script type = "text/javascript" src = "js/script.js"> </script>
-		<script>
-			
-		</script>
+		<script type="text/javascript" src="js/script.js"> </script>
+		<script type="text/javascript" src="js/one.js"> </script>
 	</body>
 </html>
