--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
 		
 	</head>
 	<body>
-	<nav class = "navbar navbar-default">
-	   <div class = "container-fluid">
-	     <div class = "navbar-header">
-	         <a class="navbar-brand" href="index.html">CS3226 Ranklist App 2017</a>
-   		 </div>
-   		 <ul class="nav navbar-nav">
-     		 <li class="active"><a href="index.html">Home</a></li>
-     		 <li><a href="help.html">Help</a></li> 
-   		 </ul>
-   		 <ul class="nav navbar-nav navbar-right">
-			<li><a href="#">Login</a></li>
-   		 </ul>
-  		</div>
-	</nav>
-	<div class = "container">
-		<table class="table table-hover sortable" id ="ranklistTable">
-			<thead>
-				<tr></tr>
-			</thead>
-			<tbody></tbody>
-		</table>
+		<nav class = "navbar navbar-default">
+		   <div class = "container-fluid">
+		     <div class = "navbar-header">
+		         <a class="navbar-brand" href="index.html">CS3226 Ranklist App 2017</a>
+	   		 </div>
+	   		 <ul class="nav navbar-nav">
+	     		 <li class="active"><a href="index.html">Home</a></li>
+	     		 <li><a href="help.html">Help</a></li> 
+	   		 </ul>
+	   		 <ul class="nav navbar-nav navbar-right">
+				<li><a href="#">Login</a></li>
+	   		 </ul>
+	  		</div>
+		</nav>
+		<div class = "container">
+			<table class="table table-hover sortable" id ="ranklistTable">
+				<thead>
+					<tr></tr>
+				</thead>
+				<tbody></tbody>
+			</table>
 		<!-- <table class = "table table-hover sortable" id = "colorTable">
 			
 		<thead>
@@ -196,7 +196,7 @@
 		  </tr>
 		</tbody>
 		</table> -->
-    </div>
+    	</div>
         <!-- jQuery library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<!-- Latest compiled JavaScript -->
@@ -207,8 +207,7 @@
 
 		</script>
 		<footer>
-  <p align="center">&copy; 2017 Lab 1 Mike Zhang Xunda, content from Steven
-  </p>
-</footer>
+  			<p align="center">&copy; 2017 Lab 1 Mike Zhang Xunda, content from Steven</p>
+		</footer>
 	</body>
 </html>
