a nasty implementation of auto filled table no storage of results; css highlighting cells are broken

--- a/student1.html
+++ b/student1.html
@@ -80,7 +80,7 @@
 		  <tr>
 			<td>Mini Contests</td>
 			<td class="mini-contest">0</td>
-			<td class="mini-contest" id="1">x</td>
+			<td class="mini-contest" id="1">1</td>
 			<td class="mini-contest" id="2">x</td>
 			<td class="mini-contest" id="3">x</td>
 			<td class="mini-contest" id="4">x</td>
@@ -173,8 +173,7 @@
 			<td class="achievements" id="11"></td>
 			<td class="achievements" id="12"></td>
 		  </tr>
-		</tbody>
-		-->  
+		</tbody>-->
 		</table>
 
     <p>Achievement details:
@@ -194,12 +193,12 @@
   <p align="center">&copy; 2017 Lab 1 Mike Zhang Xunda, content from Steven
   </p>
 </footer>
-       <!-- jQuery library -->
+    <!-- jQuery library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<!-- Latest compiled JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.28.4/js/jquery.tablesorter.js"></script> 
-		<script type="text/javascript" src="js/script.js"> </script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.28.4/js/jquery.tablesorter.js"></script> 		
 		<script type="text/javascript" src="js/one.js"> </script>
+		<script type="text/javascript" src="js/script.js"> </script>
 	</body>
 </html>
