--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 		<!-- Latest compiled JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.28.4/js/jquery.tablesorter.js"></script> 
+		<script type="text/javascript" src="js/data.js"> </script>
 		<script type = "text/javascript" src = "js/script.js"> </script>
 		<script>
 
