--- a/student3.html
+++ b/student3.html
@@ -82,7 +82,7 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.28.4/js/jquery.tablesorter.js"></script> 		
 		<script type="text/javascript" src="js/data.js"> </script>
-		<script type="text/javascript" src="js/one.js"> </script>
+		<script type="text/javascript" src="js/student.js"> </script>
 		<script type="text/javascript" src="js/script.js"> </script>
     <script>
       $(document).ready(function() {
