removed more console log student 2 is not properly formatted, fixing

--- a/student1.html
+++ b/student1.html
@@ -83,7 +83,7 @@
     <script>
       $(document).ready(function() {
           var sum = createTable("abyss",data["abyss"]);
-          console.log(sum);
+          //console.log(sum);
           hightlightCrosses();
           generateComponentScore("abyss");
       }); 
