--- a/student3.html
+++ b/student3.html
@@ -83,7 +83,7 @@
     <script>
       $(document).ready(function() {
           var sum = createTable("noire",data["noire"]);
-          console.log(sum);
+          //console.log(sum);
           hightlightCrosses();
           generateComponentScore("noire");
       }); 
