fix incorrect indexing, move footer rendering to common.js

--- a/student1.html
+++ b/student1.html
@@ -66,18 +66,15 @@
       </div>
     </div>
 
-    <footer>
-      <p align="center">&copy; 2017 Lab 1 Mike Zhang Xunda, content from Steven
-      </p>
-    </footer>
-    <!-- jQuery library -->
+    <footer class="footerContainer"></footer>
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<!-- Latest compiled JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.28.4/js/jquery.tablesorter.js"></script> 		
 		<script type="text/javascript" src="js/data.js"> </script>
 		<script type="text/javascript" src="js/student.js"> </script>
-		<script type="text/javascript" src="js/script.js"> </script>
+    <script type="text/javascript" src="js/script.js"> </script>
+    <script type="text/javascript" src="js/common.js"> </script>
     <script>
       $(document).ready(function() {
           var sum = createTable("abyss",data["abyss"]);
