--- a/student2.html
+++ b/student2.html
@@ -3,8 +3,6 @@
 	<head>
 	  <meta charset = "utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel ="stylesheet" href ="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -24,61 +22,59 @@
 			<li><a href="#">Login</a></li>
    		 </ul>
   		</div>
-	</nav>
+	  </nav>
 
-<div class="container-fluid">
-<div class="row">
-  <div class="col-xs-12 col-sm-8">
-    <h4><b>Raff</b> in MN02007 S2 AY 2016/17</h4>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12 col-sm-8">
+          <h4><b>Raff</b> in MN02007 S2 AY 2016/17</h4>
 
-    <p>Facebook account: <a href="https://facebook.com" target="_blank"><b>Raff</b> <img height="15px" src="img/facebook.jpg"></a>
-    </p>
+          <p>Facebook account: <a href="https://facebook.com" target="_blank"><b>Raff</b> <img height="15px" src="img/facebook.jpg"></a>
+          </p>
 
-    <div id="raffComponentScoreContainer">
+          <div id="raffComponentScoreContainer">
+          </div>
+        </div>
+        <div class="hidden-xs hidden-sm col-sm-1">
+          <img style="display: block; margin-left: auto; margin-right: auto; border: 1px solid" src="img/IND.png" width="100px">
+        </div>
+        <div class="hidden-xs hidden-sm col-sm-2">
+          <img style="display: block; margin-left: auto; margin-right: auto; border: 1px solid" src="img/anger.png" width="130px" height="170px">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12 col-sm-5">
+          <p>Detailed scores:
+          </p>
+
+          <div class = "container -fluid">
+      		<table class = "table table-hover raff" id="studentTable"></table>
+          <p>Achievement details:
+          </p>
+
+          <ol>
+            <li>Let it begins</li>          
+            <li>Quick starter</li>                                        
+          </ol>
+
+          <p>Specific (public) comments about this student: <b></b>
+          </p>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="hidden-xs hidden-sm col-sm-1">
-    <img style="display: block; margin-left: auto; margin-right: auto; border: 1px solid" src="img/IND.png" width="100px">
-  </div>
-  <div class="hidden-xs hidden-sm col-sm-2">
-    <img style="display: block; margin-left: auto; margin-right: auto; border: 1px solid" src="img/anger.png" width="130px" height="170px">
-  </div>
-</div>
 
-<div class="row">
-  <div class="col-xs-12 col-sm-5">
-    <p>Detailed scores:
-    </p>
+    <footer class="footerContainer"></footer>
 
-    <div class = "container -fluid">
-		<table class = "table table-hover raff" id="studentTable"></table>
-    <p>Achievement details:
-    </p>
-
-    <ol>
-      <li>Let it begins</li>          
-      <li>Quick starter</li>                                        
-    </ol>
-
-    <p>Specific (public) comments about this student: <b></b>
-    </p>
-    </div>
-  </div>
-</div>
-</div>
-
- <footer>
-  <p align="center">&copy; 2017 Lab 1 Mike Zhang Xunda, content from Steven
-  </p>
-</footer>
-    <!-- jQuery library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<!-- Latest compiled JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.28.4/js/jquery.tablesorter.js"></script> 		
 		<script type="text/javascript" src="js/data.js"> </script>
 		<script type="text/javascript" src="js/student.js"> </script>
-		<script type="text/javascript" src="js/script.js"> </script>
+    <script type="text/javascript" src="js/script.js"> </script>
+    <script type="text/javascript" src="js/common.js"> </script>
     <script>
       $(document).ready(function() {
           var sum = createTable("raff",data["raff"]);
