--- a/student3.html
+++ b/student3.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang = "en">
 	<head>
-	   <meta charset = "utf-8">
+	  <meta charset = "utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel ="stylesheet" href ="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -66,18 +64,15 @@
       </div>
     </div>
 
-     <footer>
-      <p align="center">&copy; 2017 Lab 1 Mike Zhang Xunda, content from Steven
-      </p>
-    </footer>
-    <!-- jQuery library -->
+    <footer class="footerContainer"></footer>
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<!-- Latest compiled JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.28.4/js/jquery.tablesorter.js"></script> 		
 		<script type="text/javascript" src="js/data.js"> </script>
 		<script type="text/javascript" src="js/student.js"> </script>
-		<script type="text/javascript" src="js/script.js"> </script>
+    <script type="text/javascript" src="js/script.js"> </script>
+    <script type="text/javascript" src="js/common.js"> </script>
     <script>
       $(document).ready(function() {
           var sum = createTable("noire",data["noire"]);
