--- a/index.html
+++ b/index.html
@@ -10,18 +10,28 @@
 		<title>CS3226 Ranklist App 2017</title>	
 	</head>
 	<body>
-		<nav class = "navbar navbar-default">
-		   <div class = "container-fluid">
+		<nav class = "navbar navbar-default" role ="navigation">
+		   <div class = "container">
 		     <div class = "navbar-header">
+		         <button type="button" class = "navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+		         
+		            <span class = "sr-only"> Toggle Navigation </span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		         </button>
 		         <a class="navbar-brand" href="index.html">CS3226 Ranklist App 2017</a>
 	   		 </div>
-	   		 <ul class="nav navbar-nav">
-	     		 <li class="active"><a href="index.html">Home</a></li>
-	     		 <li><a href="help.html">Help</a></li> 
+	   		 <div class = "navbar-collapse collapse">
+                 <ul class="nav navbar-nav">
+	     		     <li class="active"><a href="index.html">Home</a></li>
+	     		     <li><a href="help.html">Help</a></li> 
+	   		     </ul>
+	   		     <ul class="nav navbar-nav navbar-right">
+				 <li><a href="#">Login</a></li>
 	   		 </ul>
-	   		 <ul class="nav navbar-nav navbar-right">
-				<li><a href="#">Login</a></li>
-	   		 </ul>
+	   		 </div>
+	   		 
 	  		</div>
 		</nav>
 		<div class = "container">
